[tool.poetry]
name = "passbook"
version = "1.1.0"
description = "Apple Wallet pass creation library."
authors = ["Gonzalo Ruiz <rgon@rgon.es>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
cryptography = "^39.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.2"
path = "16.0.0"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
