[tool.poetry]
name = "passbook"
version = "1.1.1"
description = "Apple Wallet pass creation library."
authors = ["Gonzalo Ruiz <rgon@rgon.es>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.12"
cryptography = "^44.0.2||^43.0.0||^42.0.8"

[tool.poetry.dev-dependencies]
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core>=1.1.0"]
build-backend = "poetry.core.masonry.api"
